# AcceptanceChecker

./: .gitignore  AGENTS.md  README.md  THREE_PARTY_RELEASE_REVIEW.md  TODO.md  main.py  pyproject.toml  requirements.txt  smoketest.py  thresholds.default.json
.github/workflows/: ci.yml
acceptance_checker/: __init__.py  versions.py
acceptance_checker/cli/: __init__.py  __main__.py  batch.py  v4.py
acceptance_checker/core/: __init__.py  analyzer.py  config.py  dataset_manifest.py  detector.py  g1_measurement.py  g2_measurement.py  g3_measurement.py  g5_measurement.py  g6_measurement.py  golden_catalog.py  image.py  io_utils.py  judge.py  legacy_adapter.py  loglog_analysis.py  roi.py  (+12 more)
benchmarks/: __init__.py  benchmark_line_scan.py
examples/: README.md  run_v4_demo.py
tests/: conftest.py  test_analyzer.py  test_config.py  test_dataset_manifest.py  test_detector.py  test_formal_report.py  test_formal_report_schema.py  test_g1_measurement.py  test_g2_measurement.py  test_g3_measurement.py  test_g5_measurement.py  test_g6_measurement.py  test_golden_catalog.py  test_golden_regression_manifest.py  test_history_log.py  test_image.py  test_judge.py  test_legacy_migration.py  test_loglog_analysis.py  test_performance_benchmark.py  test_recommendations.py  test_release_readiness.py  test_responsibility.py  test_roi.py  test_session_workflow.py  test_session_workflow_gui.py  test_temporal_analysis.py  test_traceability.py  test_v4_cli.py  test_v4_complete_demo.py  test_v4_domain.py  test_v4_judge.py  test_v4_metric_coverage.py  test_v4_specification.py  test_waiver.py
(+25 files in other folders)
